[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Bethesda re tools"
authors = ["FlayaN", "Vermunds"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = ">=21.9b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
